# units-nostd-rs

./: .changelog.js  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.config/: nextest.toml
.github/workflows/: cargo_test.yml  check_commits.yml  prepare-release.yml  publish-release.yml  release-on-approval.yml
units-nostd/: Cargo.toml
units-nostd/src/: base_unit.rs  composite_unit.rs  lib.rs  normalized_unit.rs  prefixes.rs  quantity.rs  scale.rs  unit.rs
units-nostd/src/quantity/: errors.rs  si.rs
units-nostd/src/unit/: helpers.rs  ops.rs
