[package]
name = "units-nostd"
version = ""
edition = "2024"
authors = ["Nikolai Filchenko <finomen812@gmail.com>"]
license = "MIT"
description = "no-std crate providing types for physical quantities"
documentation = "https://docs.rs/units-nostd"
repository = "https://github.com/finomen/units-nostd-rs"
homepage = "https://github.com/finomen/units-nostd-rs"
keywords = ["units", "quantity"]
categories = ["embedded", "no-std"]
readme = "../README.md"
rust-version = "1.98"

[lib]
name = "units"

[features]
# By default every quantity module is enabled. Disable with
# `default-features = false` and opt back in to just the units you need;
# derived units automatically pull in the modules they are built from.
default = [
    "length",
    "angle",
    "time",
    "mass",
    "temperature",
    "electric_current",
    "luminous_intensity",
    "amount_of_substance",
]

serde = ["dep:serde"]

# Convenience feature enabling every quantity module.
full = [
    # base units
    "length",
    "angle",
    "time",
    "mass",
    "temperature",
    "electric_current",
    "luminous_intensity",
    "amount_of_substance",
    # derived units
    "area",
    "volume",
    "acceleration",
    "velocity",
    "wave_number",
    "mass_density",
    "specific_volume",
    "current_density",
    "magnetic_field_strength",
    "amount_of_substance_concentration",
    "luminance",
    "frequency",
    "force",
    "energy",
    "electric_charge",
    "power",
    "potential_difference",
    "capacitance",
    "electrical_resistance",
    "magnetic_flux",
    "magnetic_flux_density",
    "inductance",
    "pressure",
    "dynamic_viscosity",
    "surface_tension",
    "angular_velocity",
    "angular_acceleration",
    "heat_flux_density",
    "entropy",
    "specific_heat_capacity",
    "specific_energy",
    "thermal_conductivity",
    "electric_field_strength",
    "electric_charge_density",
    "electric_flux_density",
    "molar_energy",
    "molar_entropy",
]

# Base units (no dependencies on other quantity modules).
length = []
angle = []
time = []
mass = []
temperature = []
electric_current = []
luminous_intensity = []
amount_of_substance = []

# Derived units. Each lists the modules it is constructed from; Cargo resolves
# these transitively, so enabling a derived unit pulls in everything it needs.
area = ["length"]
volume = ["length"]
acceleration = ["length", "time"]
velocity = ["length", "time"]
wave_number = ["length"]
mass_density = ["length", "mass", "volume"]
specific_volume = ["length", "mass", "volume"]
current_density = ["area", "electric_current"]
magnetic_field_strength = ["electric_current", "length"]
amount_of_substance_concentration = ["amount_of_substance", "volume"]
luminance = ["area", "luminous_intensity"]
frequency = ["time"]
force = ["acceleration", "length", "mass"]
energy = ["force", "length"]
electric_charge = ["electric_current", "time"]
power = ["energy", "time"]
potential_difference = ["electric_current", "power"]
capacitance = ["electric_charge", "potential_difference"]
electrical_resistance = ["electric_current", "potential_difference"]
magnetic_flux = ["potential_difference", "time"]
magnetic_flux_density = ["area", "magnetic_flux"]
inductance = ["electric_current", "magnetic_flux"]
pressure = ["area", "force"]
dynamic_viscosity = ["pressure", "time"]
surface_tension = ["force", "length"]
angular_velocity = ["angle", "time"]
angular_acceleration = ["angle", "time"]
heat_flux_density = ["length", "power"]
entropy = ["energy", "temperature"]
specific_heat_capacity = ["energy", "mass", "temperature"]
specific_energy = ["energy", "mass"]
thermal_conductivity = ["energy", "length", "power", "temperature"]
electric_field_strength = ["length", "potential_difference"]
electric_charge_density = ["electric_charge", "length"]
electric_flux_density = ["electric_charge", "length"]
molar_energy = ["amount_of_substance", "energy"]
molar_entropy = ["amount_of_substance", "energy", "temperature"]

[dependencies]
gcd = "2.3.0"
paste = "1.0.15"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"]}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]